src/test/deca/context/invalid/class/cast/impossible.deca
// Description:
//    Cast to an daughter class
//
// Resultats:
//    Cannot cast A to B

class A {}

class B extends A {}

{
	A a;
	B b = (B) (a);
}
